# Sunny

./: .env.security  .gitattributes  .gitignore  =2.0.0  API_ARCHITECTURE_DESIGN.md  AUTHENTICATION_SYSTEM_COMPLETE.md  CLEANUP_COMPLETION_REPORT.md  CLIENT_CODEBASE_STRUCTURE.md  COMPREHENSIVE_FOLDER_ANALYSIS.md  CONTRIBUTING.md  DEV_COMMANDS.md  FOLDER_CLEANUP_PLAN.md  FOLDER_STRUCTURE_FINAL.md  GLOBAL_AUTHENTICATION_SYSTEM.md  HELIOS_ACTIVATION_SUMMARY.md  INSTITUTIONAL_DASHBOARD_ARCHITECTURE.md  LICENSE.txt  MIGRATION_COMPLETE.md  MIGRATION_DOCUMENTATION.md  MIGRATION_PLAN.md  PLATFORM_DOCUMENTATION.md  PRODUCTION_READINESS_CHECKLIST.md  README-detailed.md  README.md  SETUP_INSTRUCTIONS.md  SHARED_DASHBOARD_COMPONENTS.md  Sunny Company Technical Documentation.md  THEME_ERROR_FIX.md  UNIFIED_PAYMENT_ARCHITECTURE.md  WEBSITE_STRUCTURE_DOCUMENTATION.md  config-overrides.js  dev-cert.pem  dev-key.pem  jest.config.js  jest.e2e.config.js  jest.integration.config.js  newrelic.js  package-lock.json  package.json  pnpm-lock.yaml  (+7 more)
Sunny-main/: BUSINESS_OVERVIEW.md  README-detailed.md  SETUP-INSTRUCTIONS.md  SIMPLIFIED_GUIDE.md  TECHNICAL_OVERVIEW.md  architecture.md  package-lock.json  package.json  security-architecture.md
Sunny-main/src/core-rust/: Cargo.toml
Sunny-main/src/core-rust/src/: crypto.rs  lib.rs
Sunny-main/src/core-rust/src/fraud/: network.rs  rules.rs
Sunny-main/src/core-rust/src/security/hsm/: aws.rs  software.rs
api/: .env.example
config/: disaster-recovery.yml
docs/: ACTIVATION_EXAMPLES.md  API.md  BACKUP_RECOVERY.md  BARE_METAL_DEPLOYMENT.md  DEPLOYMENT_RUNBOOK.md  ENVIRONMENT_SETUP.md  INCIDENT_RESPONSE.md  INCIDENT_RESPONSE_PLAYBOOK.md  OAUTH_SETUP.md  ONBOARDING.md  SDK_INSTALLATION.md  SECURITY_CHECKLIST.md  (+2 more)
(+2145 files in other folders)
