[package]
name = "sunny-core"
version = "0.1.0"
edition = "2021"
authors = ["CreditBoost Team"]
description = "High-performance payment processing core for Sunny Payment Gateway"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.29", features = ["serde"] }
rust_decimal_macros = "1.29"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "offline"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
ed25519-dalek = "1.0"
argon2 = "0.5"
zeroize = "1.6"
base64 = "0.21"
regex = "1.8"
lazy_static = "1.4"
config = "0.13"
dotenv = "0.15"
futures = "0.3"
async-trait = "0.1"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
opentelemetry = { version = "0.19", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.18", features = ["rt-tokio"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
proptest = "1.2"
criterion = "0.5"
test-case = "3.1"

[features]
default = ["production"]
production = []
development = []
testing = []

[lib]
name = "sunny_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "sunny-core-server"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3